changed the home page alignment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VerbaSphere | Home</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
@@ -23,44 +23,55 @@
       </nav>
     </header>
 
-    <section class="hero">
-      <h1>Welcome to <span>VerbaSphere</span></h1>
-      <p>Your space to share, explore, and engage with brilliant minds ✨</p>
-      <a href="#community" class="cta-button">Explore Community Blogs</a>
-    </section>
+    <main>
+      <section class="hero">
+        <div class="hero-content">
+          <h1>Welcome to <span>VerbaSphere</span></h1>
+          <p>Your space to share, explore, and engage with brilliant minds ✨</p>
+          <a href="#community" class="cta-button">Explore Community Blogs</a>
+        </div>
+        <div class="scroll-indicator">
+          <div class="scroll-arrow"></div>
+          <p>Scroll to discover</p>
+        </div>
+      </section>
 
-    <section id="about" class="section">
-      <h2>🧠 About</h2>
-      <p>
-        Learn more about our mission to empower voices through writing. We
-        believe every voice matters.
-      </p>
-    </section>
+      <section id="about" class="section">
+        <h2>🧠 About</h2>
+        <p>
+          Learn more about our mission to empower voices through writing. We
+          believe every voice matters.
+        </p>
+        <a href="#write" class="section-button">Join Our Mission</a>
+      </section>
 
-    <section id="contact" class="section">
-      <h2>📬 Contact</h2>
-      <p>
-        Have questions or feedback? Get in touch with our team at
-        <a href="mailto:contact@verbasphere.com">contact@verbasphere.com</a>.
-      </p>
-    </section>
+      <section id="contact" class="section">
+        <h2>📬 Contact</h2>
+        <p>
+          Have questions or feedback? Get in touch with our team at
+          <a href="mailto:contact@verbasphere.com">contact@verbasphere.com</a>.
+        </p>
+        <a href="mailto:contact@verbasphere.com" class="section-button">Email Us</a>
+      </section>
 
-    <section id="community" class="section">
-      <h2>🌐 Community Blogs</h2>
-      <p>Read blogs from creators around the world on various topics.</p>
-    </section>
+      <section id="community" class="section">
+        <h2>🌐 Community Blogs</h2>
+        <p>Read blogs from creators around the world on various topics.</p>
+        <a href="#write" class="section-button">Become a Contributor</a>
+      </section>
 
-    <section id="write" class="section">
-      <h2>✍ Write Blog</h2>
-      <p>Contribute your own thoughts, articles, and creativity today.</p>
-      <a href="../write-blog/index.html" class="cta-button">Start Writing</a>
-    </section>
+      <section id="write" class="section">
+        <h2>✍ Write Blog</h2>
+        <p>Contribute your own thoughts, articles, and creativity today.</p>
+        <a href="../write-blog/index.html" class="cta-button">Start Writing</a>
+      </section>
+    </main>
 
     <footer>
       <p>© <span id="year"></span> VerbaSphere | Built by Team VerbaSphere</p>
     </footer>
 
     <button id="backToTop" title="Back to top">↑</button>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
