added footer element

--- a/index.html
+++ b/index.html
@@ -65,10 +65,41 @@
         <p>Contribute your own thoughts, articles, and creativity today.</p>
         <a href="../write-blog/index.html" class="cta-button">Start Writing</a>
       </section>
-    </main>
-
-    <footer>
-      <p>© <span id="year"></span> VerbaSphere | Built by Team VerbaSphere</p>
+    </main>    <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>VerbaSphere</h3>
+          <p>Empowering voices through writing.<br>Join our community of creative minds.</p>
+        </div>
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#community">Community Blogs</a></li>
+            <li><a href="#write">Write Blog</a></li>
+          </ul>
+        </div>        <div class="footer-section">
+          <h3>Connect</h3>
+          <ul>
+            <li><a href="mailto:contact@verbasphere.com" class="social-link">Email</a></li>
+            <li><a href="https://twitter.com/verbasphere" class="social-link">Twitter</a></li>
+            <li><a href="https://linkedin.com/company/verbasphere" class="social-link">LinkedIn</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Newsletter</h3>
+          <form id="newsletter-form" class="newsletter-form">
+            <input type="email" id="newsletter-email" placeholder="Enter your email" required>
+            <button type="submit" class="newsletter-btn">Subscribe</button>
+          </form>
+          <p id="newsletter-message" class="newsletter-message"></p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© <span id="year"></span> VerbaSphere | Built by Team VerbaSphere</p>
+        <p>Last updated: <span id="last-update"></span></p>
+      </div>
     </footer>
 
     <button id="backToTop" title="Back to top">↑</button>
