Added dark and light mode

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <header>
+  <body>    <header>
       <div class="logo">VerbaSphere</div>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#community">Community Blogs</a></li>
-          <li><a href="#write">Write Blog</a></li>
-        </ul>
-      </nav>
+      <div class="nav-container">
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#community">Community Blogs</a></li>
+            <li><a href="#write">Write Blog</a></li>
+          </ul>
+        </nav>
+        <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">☀️</button>
+      </div>
     </header>
 
     <main>
